--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
+    "@angular/animations": "^8.0.3",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
+    "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
