--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --sourceMap=false -c=production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,8 +22,7 @@
     "@angular/router": "~8.0.3",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
-    "ng-pick-datetime": "^7.0.0",
-    "ng-pick-datetime-moment": "^1.0.8",
+    "ng2-jalali-date-picker": "^2.2.7",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
