--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@types/chart.js": "^2.8.9",
+    "chart.js": "^2.8.0",
     "flatpickr": "^4.6.3",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "ng2-charts": "^2.3.0",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
