--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
