--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.0.3",
     "@types/chart.js": "^2.8.9",
     "chart.js": "^2.8.0",
+    "cropperjs": "^1.5.6",
     "flatpickr": "^4.6.3",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
