--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "socket.io-client": "^2.3.0",
+    "tether-drop": "^1.4.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
