--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@types/chart.js": "^2.8.9",
+    "angular-svg-icon": "^8.0.0",
     "chart.js": "^2.8.0",
     "cropperjs": "^1.5.6",
     "flatpickr": "^4.6.3",
