--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "ng2-charts": "^2.3.0",
+    "ngx-infinite-scroll": "^8.0.1",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "socket.io-client": "^2.3.0",
